Fix button spacing

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   text-align: center;
   height: 100%;
   min-height: 100vh;
-  min-width: 800px;
+  min-width: 850px;
   overflow-x: scroll;
   overflow-y: scroll;
   background-image: linear-gradient(135deg, #434343 25% , 65%, #cdcccc);
